--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 ---
-layout: single
+layout: home
 author_profile: true
-header:
-	overlay_image: /images/timeline.png
-	overlay_filter: 0.5
+header: 
+	image: /images/cover.jpg
 ---
