--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: single
 permalink: /
 author_profile: true
 header:
-  overlay_color: "#5e616c"
+  overlay_image: "/images/timeline.png"
 excerpt: >
   A flexible two-column Jekyll theme. Perfect for building personal sites, blogs, and portfolios.<br />
   <small><a href="https://github.com/mmistakes/minimal-mistakes/releases/tag/4.18.1">Latest release v4.18.1</a></small>    
