--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 layout: single
 author_profile: true
 header:
-  overlay_image: "/images/timeline.png"
-  overlay_filter: 0.6
+	overlay_color: "#5e616c"
+excerpt: 
+	test test test
 ---
