--- a/index.html
+++ b/index.html
@@ -14,3 +14,7 @@ From January 2020, after the fusion of Irstea and INRA to become INRAE, he conti
 
 He interests in building complex systems using novel technologies in the domains of Embedded System, Wireless Sensor Network (WSN), Ontology and Reasoning System. 
 He is working on the project ConnecSens to develop an adaptive context-aware irrigation system for the AgrotechnoPôle in the Auvergne-Rhône-Alpes region.  
+
+<br/>
+<br/>
+<a href="https://drive.google.com/file/d/1r5HYkOBncoYH-ez67OrGUuRnRAt549hv/view?usp=sharing">My one page CV</a>
