--- a/index.html
+++ b/index.html
@@ -17,4 +17,4 @@ He is working on the project ConnecSens to develop an adaptive context-aware irr
 
 <br/>
 <br/>
-<a href="https://drive.google.com/file/d/1r5HYkOBncoYH-ez67OrGUuRnRAt549hv/view?usp=sharing">My one page CV</a>
+<a href="https://drive.google.com/file/d/1r5HYkOBncoYH-ez67OrGUuRnRAt549hv/view?usp=sharing">My One-Page-CV</a>
