--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ Quang-Duy NGUYEN was born in Hoàn-Kiém district, Hanoi, Vietnam.
 He completed his Computer Engineering's degree at Hanoi University of Science and Technology in 2012. 
 He obtained his master's diploma in Communication Systems and Networking (Master SIR) from the University Claude Bernard Lyon 1 in 2015. 
 He started his PhD in January 2017 at the Technologies and Information Systems for Agrosystems (TSCF) research unit in the IRSTEA centre Clermont-Ferrand, France, under the supervision of Dr. Jean-Pierre CHANET (Irstea), Dr. Catherine ROUSSEY (Irstea) and Dr. Christophe de VAULX (Limos). 
-From January 2020, after the fusion of Irstea and INRA to become INRAE, he continues his research to finish his PhD under the title of a member of TSCF, INRAE.    
+After the fusion of Irstea and INRA to become INRAE in January 2020, he continues his research to finish the PhD as a member of TSCF, INRAE.    
 
 <br/>
 <br/>
