--- a/index.html
+++ b/index.html
@@ -3,11 +3,7 @@ layout: single
 author_profile: true
 classes: wide
 ---
-Quang-Duy NGUYEN was born in Hoàn-Kiém district, Hanoi, Vietnam. 
-He completed his Computer Engineering's degree at Hanoi University of Science and Technology in 2012. 
-He obtained his master's diploma in Communication Systems and Networking (Master SIR) from the University Claude Bernard Lyon 1 in 2015. 
-He started his PhD in January 2017 at the Technologies and Information Systems for Agrosystems (TSCF) research unit in the IRSTEA centre Clermont-Ferrand, France, under the supervision of Dr. Jean-Pierre CHANET (Irstea), Dr. Catherine ROUSSEY (Irstea) and Dr. Christophe de VAULX (Limos). 
-After the fusion of Irstea and INRA to become INRAE in January 2020, he continues his research to finish the PhD as a member of TSCF, INRAE.    
+Quang-Duy NGUYEN was born in Hoàn-Kiém district, Hanoi, Vietnam. He attended local public schools and graduated from Chu Van An national high school in 2007. In 2012, he completed his Computer Engineering's degree at Hanoi University of Science and Technology (HUST). Later, he started a master dual degree program for computer science organized by the Institute Francophone International (IFI). He obtained a master's degree in Information Technology from the Vietnam National University (VNU), and a master's degree in Communication Systems and Networking (Master SIR) from the University Claude Bernard Lyon 1, in 2016. He successfully defended his Ph.D. in July 2020 at the Technologies and Information Systems for Agrosystems (TSCF) research unit of the National Research Institute for Agriculture, Food, and Environment (INRAE), Clermont-Ferrand, France. He is currently doing a post-doc at the Cybersecurity for Communication and Networking group (CCN) of Télécom-Paris, under the supervision of Professor Patrick BELLOT.   
 
 <br/>
 <br/>
@@ -17,4 +13,4 @@ He is working on the project ConnecSens to develop an adaptive context-aware irr
 
 <br/>
 <br/>
-<a href="https://drive.google.com/file/d/1r5HYkOBncoYH-ez67OrGUuRnRAt549hv/view?usp=sharing">My One-Page-CV</a>
+<a href="https://nqduy35.github.io/images/cv.pdf">Curriculum Vitae (CV)</a>
