--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@ Quang-Duy NGUYEN was born in Hoàn-Kiém district, Hanoi, Vietnam. He attended l
 <br/>
 <br/>
 
-He interests in building complex systems using novel technologies in the domains of Embedded System, Wireless Sensor Network (WSN), Ontology and Reasoning System. 
-He is working on the project ConnecSens to develop an adaptive context-aware irrigation system for the AgrotechnoPôle in the Auvergne-Rhône-Alpes region.  
+Research domains: Internet of Things, Industrie 4.0, Embedded System, Wireless Sensor Network (WSN), Ontology, Reasoning, OPC UA  
 
 <br/>
 <br/>
