hide some sections

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ Quang-Duy NGUYEN was born in Hoàn-Kiém district, Hanoi, Vietnam. He attended l
 <br/>
 <br/>
 
-Research domains: Internet of Things, Industrie 4.0, Embedded System, Wireless Sensor Network (WSN), Ontology, Reasoning, OPC UA  
+<b>Research interests</b>: Internet of Things (IoT), Industrie 4.0, Embedded System, Wireless Sensor Network (WSN), Ontology, Reasoning, OPC UA  
 
 <br/>
 <br/>
