--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: single
 author_profile: true
 classes: wide
 ---
-Quang-Duy NGUYEN was born in Hoàn-Kiém district, Hanoi, Vietnam. He attended local public schools and graduated from Chu Van An national high school in 2007. In 2012, he completed his Computer Engineering's degree at Hanoi University of Science and Technology (HUST). Later, he started a master dual degree program for computer science organized by the Institute Francophone International (IFI). He obtained a master's degree in Information Technology from the Vietnam National University (VNU), and a master's degree in Communication Systems and Networking (Master SIR) from the University Claude Bernard Lyon 1, in 2016. He successfully defended his Ph.D. in July 2020 at the Technologies and Information Systems for Agrosystems (TSCF) research unit of the National Research Institute for Agriculture, Food, and Environment (INRAE), Clermont-Ferrand, France. He is currently doing a post-doc at the Cybersecurity for Communication and Networking group (CCN) of Télécom-Paris, under the supervision of Professor Patrick BELLOT.   
+<b>Biography</b>: Quang-Duy NGUYEN was born in Hoàn-Kiém district, Hanoi, Vietnam. He attended local public schools and graduated from Chu Van An national high school in 2007. In 2012, he completed his Computer Engineering's degree at Hanoi University of Science and Technology (HUST). Later, he started a master dual degree program for computer science organized by the Institute Francophone International (IFI). He obtained a master's degree in Information Technology from the Vietnam National University (VNU), and a master's degree in Communication Systems and Networking (Master SIR) from the University Claude Bernard Lyon 1, in 2016. He successfully defended his Ph.D. in July 2020 at the Technologies and Information Systems for Agrosystems (TSCF) research unit of the National Research Institute for Agriculture, Food, and Environment (INRAE), Clermont-Ferrand, France. He is currently doing a post-doc at the Cybersecurity for Communication and Networking group (CCN) of Télécom-Paris, under the supervision of Professor Patrick BELLOT.   
 
 <br/>
 <br/>
@@ -12,4 +12,4 @@ Quang-Duy NGUYEN was born in Hoàn-Kiém district, Hanoi, Vietnam. He attended l
 
 <br/>
 <br/>
-<a href="https://nqduy35.github.io/images/cv.pdf">Curriculum Vitae (CV)</a>
+<b>Curriculum Vitae></b>: <a href="https://nqduy35.github.io/images/cv.pdf">Short Version</a>
