fix error Vitae

--- a/index.html
+++ b/index.html
@@ -12,4 +12,4 @@ classes: wide
 
 <br/>
 <br/>
-<b>Curriculum Vitae></b>: <a href="https://nqduy35.github.io/images/cv.pdf">Short Version</a>
+<b>Curriculum Vitae</b>: <a href="https://nqduy35.github.io/images/cv.pdf">Short Version</a>
