--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@ layout: single
 author_profile: true
 classes: wide
 ---
-<b>Biography</b>: Quang-Duy NGUYEN was born in Hoàn-Kiém district, Hanoi, Vietnam. He attended local public schools and graduated from Chu Van An national high school in 2007. In 2012, he completed his Computer Engineering's degree at Hanoi University of Science and Technology (HUST). Later, he started a master dual degree program for computer science organized by the Institute Francophone International (IFI). He obtained a master's degree in Information Technology from the Vietnam National University (VNU), and a master's degree in Communication Systems and Networking (Master SIR) from the University Claude Bernard Lyon 1, in 2016. He successfully defended his Ph.D. in July 2020 at the Technologies and Information Systems for Agrosystems (TSCF) research unit of the National Research Institute for Agriculture, Food, and Environment (INRAE), Clermont-Ferrand, France. He is currently doing a post-doc at the Cybersecurity for Communication and Networking group (CCN) of Télécom-Paris, under the supervision of Professor Patrick BELLOT.   
-
+<b>Biography</b>: Quang-Duy NGUYEN was born in Hoàn-Kiém district, Hanoi, Vietnam. He attended local public schools and graduated from Chu Van An national high school in 2007. In 2012, he completed his Computer Engineering's degree at Hanoi University of Science and Technology (HUST). Later, he continued a master dual degree program for computer science organized by Institute Francophone International (IFI). He obtained a master's degree in Information Technology from the Vietnam National University (VNU) and a master's degree in Communication Systems and Networking (Master SIR) from the University Claude Bernard Lyon 1, in 2016. He successfully defended his PhD in July 2020 at the Technologies and Information Systems for Agrosystems (TSCF) research unit of the National Research Institute for Agriculture, Food, and Environment (INRAE), Clermont-Ferrand, France. Then, he started his research career with a first one-year postdoctoral contract at the Cybersecurity for Communication and Networking group (CCN) of Télécom-Paris in a project collaborated with the French National Railway Company (SNCF). He is currently doing a second post-doc at the Laboratory for Integration of Systems and Technology (LIST) of the French Alternative Energies and Atomic Energy Commission (CEA), Palaiseau, directed by Dr Saadia DHOUIB.  
 <br/>
 <br/>
 
-<b>Research interests</b>: Internet of Things (IoT), Industrie 4.0, Embedded System, Wireless Sensor Network (WSN), Ontology, Reasoning, OPC UA  
+<b>Research interests</b>: Internet of Things (IoT), Cyber-Physical Systems (CPS), OPC UA, Wireless Sensor Network (WSN), Ontology  
 
 <br/>
 <br/>
-<b>Curriculum Vitae</b>: <a href="https://nqduy35.github.io/images/cv.pdf">Short Version</a>
+<b>Curriculum Vitae</b>: <a href="https://nqduy35.github.io/docs/cv.pdf">Short Version</a>
