update index.html point to files

--- a/index.html
+++ b/index.html
@@ -11,4 +11,4 @@ classes: wide
 
 <br/>
 <br/>
-<b>Curriculum Vitae</b>: <a href="https://nqduy35.github.io/docs/cv.pdf">Short Version</a>
+<b>Curriculum Vitae</b>: <a href="https://nqduy35.github.io/files/cv.pdf">Short Version</a>
