switch CPS to DT in index

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ classes: wide
 <br/>
 <br/>
 
-<b>Research interests</b>: Internet of Things (IoT), Cyber-Physical Systems (CPS), OPC UA, Wireless Sensor Network (WSN), Ontology  
+<b>Research interests</b>: Internet of Things (IoT), Digital Twin (DT), OPC UA, Wireless Sensor Network (WSN), Ontology  
 
 <br/>
 <br/>
