--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ classes: wide
 <br/>
 <br/>
 
-<b>Research interests</b>: Internet of Things (IoT), OPC UA, Wireless Sensor Network (WSN), Ontology, Robotics
+<b>Research interests</b>: Internet of Things (IoT), OPC UA, Ontology, Wireless Sensor Network (WSN), Robotics
 
 <br/>
 <br/>
