--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ classes: wide
 <br/>
 <br/>
 
-<b>Research interests</b>: Industry 4.0 (I4.0), Internet of Things (IoT), OPC UA, Ontology, Asset Administration Shell (AAS)
+<b>Research interests</b>: Internet of Things (IoT), OPC UA, Ontology, Asset Administration Shell (AAS)
 
 <br/>
 <br/>
