add social network fields

--- a/index.html
+++ b/index.html
@@ -14,8 +14,14 @@ classes: wide
 <!--
 <b>Research interests</b>: Internet of Things (IoT), OPC UA, Ontology, Asset Administration Shell (AAS)
 -->
-<b>Research publications</b>: <a href="https://scholar.google.fr/citations?user=yMXCWm0AAAAJ&hl=fr">found on Google Scholar</a>
+<b>Research Publications</b>: <a href="https://scholar.google.fr/citations?user=yMXCWm0AAAAJ&hl=fr">found on Google Scholar</a>
 
 <br/>
 <br/>
+
+<b>Social Networks</b>: <a href="https://fr.linkedin.com/in/nqduy35">on LinkedIn</a>, <a href="https://www.researchgate.net/profile/Quang-Duy-Nguyen-4">on ResearchGate</a>
+
+<br/>
+<br/>
+
 <b>Curriculum Vitae</b>: <a href="https://nqduy35.github.io/files/cv.pdf">Short Version</a>
