small change index

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: single
 author_profile: true
 classes: wide
 ---
-<b>Biography</b>: <a href="https://orcid.org/0000-0002-3517-0945">found on ORCID</a>
+<b>Biography</b>: <a href="https://orcid.org/0000-0002-3517-0945">on ORCID</a>
 <!--
 <b>Biography</b>: Quang-Duy NGUYEN was born in Hoàn-Kiém district, Hanoi, Vietnam. He attended local public schools and graduated from Chu Van An High School in 2007. In 2012, he completed his Computer Engineering degree at Hanoi University of Science and Technology (HUST). Later, he continued a master's dual degree program for computer science organized by the Institute Francophone International (IFI). He obtained a master's degree in Information Technology from the Vietnam National University (VNU) and a master's degree in Communication Systems and Networking (Master SIR) from the University Claude Bernard Lyon 1 in 2016. He successfully defended his PhD in July 2020 at the Technologies and Information Systems for Agrosystems (TSCF) research unit of the National Research Institute for Agriculture, Food, and Environment (INRAE), Clermont-Ferrand, France. Then, he started his research career with the first one-year postdoctoral contract at the Cybersecurity for Communication and Networking group (CCN) of Télécom-Paris in a project collaborated with the French National Railway Company (SNCF). He did the second two-year post-doc at the Laboratory for Integration of Systems and Technology (LIST) of the French Alternative Energies and Atomic Energy Commission (CEA), Palaiseau, and continues to work here as a permanent researcher.  
 -->
@@ -14,7 +14,7 @@ classes: wide
 <!--
 <b>Research interests</b>: Internet of Things (IoT), OPC UA, Ontology, Asset Administration Shell (AAS)
 -->
-<b>Research Publications</b>: <a href="https://scholar.google.fr/citations?user=yMXCWm0AAAAJ&hl=fr">found on Google Scholar</a>
+<b>Research Publications</b>: <a href="https://scholar.google.fr/citations?user=yMXCWm0AAAAJ&hl=fr">on Google Scholar</a>
 
 <br/>
 <br/>
