--- a/index.html
+++ b/index.html
@@ -24,4 +24,9 @@ classes: wide
 <br/>
 <br/>
 
-<b>Curriculum Vitae</b>: <a href="https://nqduy35.github.io/files/cv.pdf">Short Version</a>
+<b>Curriculum Vitae</b>: <a href="https://nqduy35.github.io/files/cv.pdf">Latest version</a>
+
+<br/>
+<br/>
+
+<b>Hobbies</b>: Swimming, (table) tennis, (audio) books, musical intruments.  
