--- a/index.html
+++ b/index.html
@@ -4,15 +4,13 @@ author_profile: true
 classes: wide
 ---
 <script>
-      // Function to fetch data from the API
       async function fetchData() {
           const output = document.getElementById('output');
 
           try {
-              // Replace with your API URL
               const response = await fetch('http://89.168.35.198:8935/quote');
               if (!response.ok) throw new Error('Network response was not ok');
-              const data = await response.text(); // Assuming the API returns plain text
+              const data = await response.text();
               output.value = data;
           } catch (error) {
               output.value = `Error: ${error.message}`;
@@ -49,4 +47,4 @@ classes: wide
 <br/>
 <br/>
 
-<textarea id="output" readonly>Loading...</textarea>
+<b>Quote</b>: <textarea id="output" readonly>Loading...</textarea>
