--- a/index.html
+++ b/index.html
@@ -3,6 +3,20 @@ layout: single
 author_profile: true
 classes: wide
 ---
+<style>
+  #output {
+    display: inline-block;  
+    padding: 10px 20px;     
+    text-decoration: none;  
+    color: black;           
+    background-color: #D3D3D3;
+    border: 2px solid #AAAAAA;
+    border-radius: 5px;    
+    font-family: Arial, sans-serif;
+    font-size: 16px;   
+  }
+</style>
+
 <script>
 	const quotes = [
 		'"Knowing yourself is the beginning of all wisdom." - Aristotle',
