--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@ classes: wide
 		'"When you want something with all your heart, all the universe conspires in helping you to archive it." - Paolo Coelho',
 		'"Being a man is first and foremost being a good human. That means being responsible, reliable, working hard, kind, respectful and compassionate." - Barack Obama',
 		'"Nothing is more precious than independence and freedom." - Chi Minh Ho'
+		'"Mercy to the guilty is cruelty to the innocent." - Adam Smith'
 		]
 
 	function setText() {
-		const randomIndex = Math.floor(Math.random() * 8);
+		const randomIndex = Math.floor(Math.random() * 9);
 		const output = document.getElementById('output');
 		output.textContent = quotes[randomIndex];
 	}
