--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ classes: wide
 		'"No amount of experimentation can ever prove me right. A single experiment can prove me wrong." - Albert Einstein',
 		'"When you want something with all your heart, all the universe conspires in helping you to archive it." - Paolo Coelho',
 		'"Being a man is first and foremost being a good human. That means being responsible, reliable, working hard, kind, respectful and compassionate." - Barack Obama',
-		'"Nothing is more precious than independence and freedom." - Chi Minh Ho'
+		'"Nothing is more precious than independence and freedom." - Chi Minh Ho',
 		'"Mercy to the guilty is cruelty to the innocent." - Adam Smith'
 		]
 
