--- a/index.html
+++ b/index.html
@@ -26,11 +26,12 @@ classes: wide
 		'"When you want something with all your heart, all the universe conspires in helping you to archive it." - Paolo Coelho',
 		'"Being a man is first and foremost being a good human. That means being responsible, reliable, working hard, kind, respectful and compassionate." - Barack Obama',
 		'"Nothing is more precious than independence and freedom." - Chi Minh Ho',
-		'"Mercy to the guilty is cruelty to the innocent." - Adam Smith'
+		'"Mercy to the guilty is cruelty to the innocent." - Adam Smith',
+		'"Forme-toi toi-même et agis sur les autres par ce que tu es." - Wilhelm von Humboldt'
 		]
 
 	function setText() {
-		const randomIndex = Math.floor(Math.random() * 9);
+		const randomIndex = Math.floor(Math.random() * 10);
 		const output = document.getElementById('output');
 		output.textContent = quotes[randomIndex];
 	}
