--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ classes: wide
 
 <br/>
 <br/>
-<b>Other Research IDs</b>: <a href="https://www.webofscience.com/wos/author/record/2213253">WoS</a>, <a href="https://www.scopus.com/authid/detail.uri?authorId=57190120717">Scopus</a>
+<b>Other Research IDs</b>: <a href="https://www.webofscience.com/wos/author/record/2213253">WoS</a>, <a href="https://www.scopus.com/authid/detail.uri?authorId=57190120717">Scopus</a>, <a href="https://hal.science/search/index/q/*/authIdHal_s/quang-duy-nguyen">HAL</a>
 <br/>
 <br/>
 
