--- a/ego/igo.html
+++ b/ego/igo.html
@@ -16,7 +16,8 @@
     text-align: center;
   }
   #board-wrapper {
-    width: 416px;  
+    width: 100%;
+    max-width: 416px;  
     height: 416px;
     margin: 0 auto 12px auto;  
   }
