--- a/ego/igo.html
+++ b/ego/igo.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
 <meta charset="UTF-8" />
 <title>Igo</title>
 <style>
-  body {
+  html, body {
+    overflow-x: hidden;
+    touch-action: pan-y;
     font-family: sans-serif;
-    margin: 0; padding: 20px;
+    margin: 0; 
+    padding: 20px;
     display: flex;
     flex-direction: column;
     align-items: center; 
